# agentic-reliability-framework

./: .gitignore  CONTRIBUTING.md  README.md  TUTORIAL.md  __init__.py  constants.py  deepdocs.yml  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package-conda.yml
agentic_reliability_framework/: __init__.py  __version__.py
agentic_reliability_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentic_reliability_framework/core/: __init__.py
agentic_reliability_framework/core/adapters/: __init__.py  claude.py
agentic_reliability_framework/core/config/: constants.py
agentic_reliability_framework/core/governance/: __init__.py  cost_estimator.py  cost_estimator.py.bak  governance_loop.py  healing_intent.py  policies.py  risk_engine.py
agentic_reliability_framework/core/mcp/: __init__.py  oss_client.py
agentic_reliability_framework/core/models/: healing_intent.py
agentic_reliability_framework/core/nlp/: nli.py
agentic_reliability_framework/runtime/: __init__.py  engine.py
agentic_reliability_framework/runtime/agents/: diagnostician.py
core/config/: constants.py  oss_config.py
core/governance/: __init__.py  healing_intent.py  policies.py  risk_engine.py
core/mcp/: oss_client.py
core/models/: event.py
infrastructure/: __init__.py  cost_estimator.py  healing_intent.py  intents.py  policies.py  readme.md  risk_engine.py
infrastructure/azure/: __init__.py  azure_models.py  azure_simulator.py
runtime/agents/: __init__.py  base.py  detective.py  predictive_agent.py
runtime/analytics/: __init__.py
runtime/hmc/: __init__.py
runtime/memory/: enhanced_faiss.py  rag_graph.py
tests/infrastructure/: test_azure_simulator.py  test_cost_estimator.py  test_intents.py  test_policies.py  test_risk_engine.py
(+23 files in other folders)
