[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-reliability-framework"
version = "1.0.0"
description = "Agentic Reliability Framework - OSS Edition"
readme = "README.md"
authors = [
    {name = "Juan Petter", email = "juan@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/petter2025us/agentic-reliability-framework"

[tool.setuptools.packages.find]
include = ["agentic_reliability_framework*"]
